--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <body>
 
-  <section id="title">
+  <section class="colored-section" id="title">
 
     <div class="container-fluid">
 
@@ -62,7 +62,7 @@
             </li>
           </ul>
         </div>
-      </nav> 
+      </nav>
 
       <!-- Title -->
 
@@ -86,7 +86,7 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section class="white-section" id="features">
 
     <div class="container-fluid">
 
@@ -115,7 +115,7 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="colored-section" id="testimonials">
 
     <div id="testimonial-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
@@ -144,7 +144,8 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section  class="colored-section" id="press">
+
     <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
@@ -154,7 +155,7 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section class="white-section" id="pricing">
 
     <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
@@ -212,20 +213,17 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
-
+  <section class="colored-section" id="cta">
    <div class="container-fluid">
-
     <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
     <button type="button" class="download-button btn btn-lg btn-dark"><i class="fab fa-apple"></i> Download</button>
     <button type="button" class="download-button btn btn-light btn-lg download-button"><i class="fab fa-google-play"></i>Download</button>
-    
    </div>
   </section>
 
   <!-- Footer -->
 
-  <footer id="footer">
+  <footer class="white-section" id="footer">
    <div class="container-fluid"></div>
     <i class="social-icon fab fa-facebook f"></i>
     <i class="social-icon fab fa-twitter"></i>
