--- a/index.html
+++ b/index.html
@@ -8,26 +8,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- CSS Stylesheets -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Ubuntu:wght@300&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/afc7b88311.js" crossorigin="anonymous"></script>
 
   <!-- Bootstrap Scripts -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
   </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
   </script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
   </script>
 </head>
 
@@ -43,8 +38,7 @@
 
         <a class="navbar-brand" href"">tindog</a>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar"
-          aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -90,27 +84,27 @@
 
     <div class="container-fluid">
 
-    <div class="row">
-      <div class="feature-box col-lg-4">
-        <i class="icon fas fa-check-circle fa-4x"></i>
-        <h3 class="feature-title">Easy to use.</h3>
-        <p>So easy to use, even your dog could do it.</p>
+      <div class="row">
+        <div class="feature-box col-lg-4">
+          <i class="icon fas fa-check-circle fa-4x"></i>
+          <h3 class="feature-title">Easy to use.</h3>
+          <p>So easy to use, even your dog could do it.</p>
+        </div>
+
+        <div class="feature-box col-lg-4">
+          <i class="icon fas fa-bullseye  fa-4x"></i>
+          <h3 class="feature-title">Elite Clientele</h3>
+          <p>We have all the dogs, the greatest dogs.</p>
+        </div>
+
+        <div class="feature-box col-lg-4 ">
+          <i class="icon fas fa-heart fa-4x"></i>
+          <h3 class="feature-title">Guaranteed to work.</h3>
+          <p>Find the love of your dog's life or your money back.</p>
+        </div>
       </div>
 
-      <div class="feature-box col-lg-4">
-        <i class="icon fas fa-bullseye  fa-4x"></i>
-        <h3 class="feature-title">Elite Clientele</h3>
-        <p>We have all the dogs, the greatest dogs.</p>
-      </div>
-
-      <div class="feature-box col-lg-4 ">
-        <i class="icon fas fa-heart fa-4x"></i>
-        <h3 class="feature-title">Guaranteed to work.</h3>
-        <p>Find the love of your dog's life or your money back.</p>
-      </div>
     </div>
-
-  </div>
   </section>
 
   <!-- Testimonials -->
@@ -144,7 +138,7 @@
 
   <!-- Press -->
 
-  <section  class="colored-section" id="press">
+  <section class="colored-section" id="press">
 
     <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
@@ -162,77 +156,78 @@
 
     <div class="row">
 
-  <div class="pricing-column col-lg-4 col-md-6">
-    <div class="card">
-      <div class="card-header">
-      <h3>Chihuahua</h3>
-     </div>
-      <div class="card-body">
-        <h2 class="price-text">Free</h2>
-        <p>5 Matches Per Day</p>
-        <p>10 Messages Per Day</p>
-        <p>Unlimited App Usage</p>
-        <button class="btn btn-lg btn-block btn-outline-dark" type="button">Sign Up</button>
-     </div>
-    </div>
-  </div>
+      <div class="pricing-column col-lg-4 col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h3>Chihuahua</h3>
+          </div>
+          <div class="card-body">
+            <h2 class="price-text">Free</h2>
+            <p>5 Matches Per Day</p>
+            <p>10 Messages Per Day</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-lg btn-block btn-outline-dark" type="button">Sign Up</button>
+          </div>
+        </div>
+      </div>
 
-  <div class="pricing-column col-lg-4 col-md-6">
-    <div class="card">
-      <div class="card-header">
-        <h3>Labrador</h3>
-     </div>
-      <div class="card-body">
-        <h2 class="price-text">$49 / mo</h2>
-        <p>Unlimited Matches</p>
-        <p>Unlimited Messages</p>
-        <p>Unlimited App Usage</p>
-        <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
-     </div>
-    </div>
-  </div>
+      <div class="pricing-column col-lg-4 col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h3>Labrador</h3>
+          </div>
+          <div class="card-body">
+            <h2 class="price-text">$49 / mo</h2>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
+          </div>
+        </div>
+      </div>
 
-  <div class="pricing-column col-lg-4">
-    <div class="card">
-      <div class="card-header">
-        <h3>Mastiff</h3>
-     </div>
-      <div class="card-body">
-        <h2 class="price-text">$99 / mo</h2>
-        <p>Pirority Listing</p>
-        <p>Unlimited Matches</p>
-        <p>Unlimited Messages</p>
-        <p>Unlimited App Usage</p>
-        <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
-     </div>
+      <div class="pricing-column col-lg-4">
+        <div class="card">
+          <div class="card-header">
+            <h3>Mastiff</h3>
+          </div>
+          <div class="card-body">
+            <h2 class="price-text">$99 / mo</h2>
+            <p>Pirority Listing</p>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
+          </div>
+        </div>
+      </div>
     </div>
-   </div>
-  </div>
 
   </section>
 
   <!-- Call to Action -->
 
   <section class="colored-section" id="cta">
-   <div class="container-fluid">
-    <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button" class="download-button btn btn-lg btn-dark"><i class="fab fa-apple"></i> Download</button>
-    <button type="button" class="download-button btn btn-light btn-lg download-button"><i class="fab fa-google-play"></i>Download</button>
-   </div>
+    <div class="container-fluid">
+      <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
+      <button type="button" class="download-button btn btn-lg btn-dark"><i class="fab fa-apple"></i> Download</button>
+      <button type="button" class="download-button btn btn-light btn-lg download-button"><i class="fab fa-google-play"></i>Download</button>
+    </div>
   </section>
 
   <!-- Footer -->
 
   <footer class="white-section" id="footer">
-   <div class="container-fluid"></div>
+    <div class="container-fluid"></div>
     <i class="social-icon fab fa-facebook f"></i>
     <i class="social-icon fab fa-twitter"></i>
     <i class="social-icon fab fa-instagram"></i>
     <i class="social-icon fas fa-envelope"></i>
 
     <p>© Copyright 2018 TinDog</p>
-   </div>
+    </div>
   </footer>
 
 </body>
+
 </html>
